feat(client): cart item details

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,9 @@
 	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
 	  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-	  <title><%= htmlWebpackPlugin.options.title %></title>
+	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	        crossorigin="anonymous">
   </head>
   <body>
     <noscript></noscript>
